# adventofcode-python

./: .gitignore  README.md  adventofcode-python.code-workspace  mise.toml  p21d2-1000-possible-visited.txt  p21d2-1000-wrong-visited.txt  p21d2-500-correct-visited.txt  p21d2-500-possible-visited.txt  package-lock.json  package.json  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  post-install.sh
.github/: renovate.json5
.github/actions/uv-project-setup/: action.yaml
.github/workflows/: check-devcontainer-build.yaml  check-devcontainer.yaml  check-github-actions.yaml  check-mypy.yaml  check-prettier.yaml  check-pyright.yaml  check-ruff.yaml  ci-cd.yaml  ci.yaml  main.yml  mise-uv-prepare-cache.yaml  mise-uv-task.yaml  run-all.yaml  test-pytest.yaml
adventofcode/: answers.py  d1.py  d10.py  d11.py  d12.py  d13.py  d14.py  d15.py  d16.py  d17.py  d18.py  d19.py  d2.py  d20.py  d21.py  d3.py  d4.py  d5.py  d6.py  d7.py  d8.py  d9.py  main.py  newmain.py
adventofcode/day1/: d1.py
adventofcode/tooling/: coordinates.py  digraph.py  map.py
adventofcode/y2023/: d1.py  d10.py  d11.py  d12.py  d13.py  d14.py  d15.py  d16.py  d17.py  d18.py  d19.py  d2.py  d20.py  d3.py  d4.py  d5.py  d6.py  d7.py  d8.py
d21-data/: d21.py.prof  result-locations.txt  result-step-counts.txt  visited-with-required-map-1.txt  visited-with-required-map-10.txt  visited-with-required-map-100.txt  visited-with-required-map-101.txt  visited-with-required-map-102.txt  visited-with-required-map-103.txt  visited-with-required-map-104.txt  visited-with-required-map-105.txt  visited-with-required-map-106.txt  visited-with-required-map-107.txt  visited-with-required-map-108.txt  visited-with-required-map-109.txt  visited-with-required-map-11.txt  visited-with-required-map-110.txt  visited-with-required-map-111.txt  visited-with-required-map-112.txt  visited-with-required-map-113.txt  visited-with-required-map-114.txt  visited-with-required-map-115.txt  visited-with-required-map-116.txt  visited-with-required-map-117.txt  visited-with-required-map-118.txt  visited-with-required-map-119.txt  visited-with-required-map-12.txt  visited-with-required-map-120.txt  visited-with-required-map-121.txt  visited-with-required-map-122.txt  visited-with-required-map-123.txt  visited-with-required-map-124.txt  visited-with-required-map-125.txt  visited-with-required-map-126.txt  visited-with-required-map-127.txt  visited-with-required-map-128.txt  visited-with-required-map-129.txt  visited-with-required-map-13.txt  visited-with-required-map-130.txt  visited-with-required-map-131.txt  (+617 more)
tests/: test_benchmark.py  test_coord2d.py  test_d11.py  test_d13.py  test_d14.py  test_d17.py  test_d20.py  test_d21.py  test_d5.py  test_d8.py  test_debugger.py  test_digraph.py  test_directions.py  test_map2d.py  test_ranges.py
tests/y2023/: test_d11.py  test_d13.py  test_d14.py  test_d20.py  test_d5.py  test_d8.py
