[project]
name = "adventofcode"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "attrs ==24.2.0",
  "typer ==0.15.1",
  "joblib ==1.4.2",
]

[project.scripts]
adventofcode = "adventofcode.main:app"

[tool.poe.tasks]
"sync:uv" = "uv sync"
"sync:npm" = "npm install"
sync = ["sync:uv", "sync:npm"]

"check:github-actions" = "npm run check:github-actions"
"check:mypy" = "mypy ."
"check:npm:dedupe" = "npm run check:npm:dedupe"
"check:prettier" = "npm run check:prettier"
"check:pyright" = "npm run check:pyright"
"check:renovateconfig" = "npm run check:renovateconfig"
"check:ruff" = "ruff check"
"check:ruff:format" = "ruff format --check"
"check:pytest" = "pytest"
check = [
  "check:ruff",
  "check:ruff:format",
  "check:prettier",
  "check:pyright",
  "check:mypy",
  "check:pytest",
  "check:github-actions",
  "check:npm:dedupe",
  "check:renovateconfig"
]

"fix:format:prettier" = "npm run fix:prettier"
"fix:format:ruff" = "ruff format"
"fix:ruff" = "ruff check --fix-only"

"fix:format" = ["fix:format:prettier", "fix:format:ruff"]
fix = ["fix:format", "fix:ruff"]

all = ["sync", "check", "runall"]

[tool.poe.tasks.runall]
cmd = "adventofcode all"
env = { PYTHONWARNINGS = "always,error" }


[dependency-groups]
dev = [
  "ruff ==0.8.3",
  "joblib-stubs ==1.4.2.5.20240918",
  "mypy ==1.13.0",
  "pytest ==8.3.4",
  "snakeviz ==2.2.2",
  "tuna ==0.5.11",
  "pyinstrument ==5.0.0",
  "poethepoet ==0.31.1",
]

[tool.pyright]
typeCheckingMode = "strict"

[tool.mypy]
strict_optional = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "COM812",
  "D10",
  "FIX",
  "ISC001",
  "PLR2004",
  "S101",
  "TD002",
  "TD003"
]

[tool.ruff.lint.extend-per-file-ignores]
"tests/**/*.py" = ["INP001"]
"adventofcode/main.py" = ["T201"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.pytest.ini_options]
filterwarnings = ["error"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
