[project]
name = "adventofcode"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = "==3.13.5"
dependencies = [
  "attrs ==25.3.0",
  "joblib ==1.5.1",
  "pyinstrument ==5.0.2",
  "typer ==0.16.0",
]

[project.scripts]
adventofcode = "adventofcode.main:app"

[tool.poe.tasks]
"sync:uv" = "uv sync"
sync = ["sync:uv"]

"check:mypy" = "mypy ."
"check:prettier" = "mise run check:prettier"
"check:pyright" = "mise run check:pyright"
"check:renovateconfig" = "mise run check:renovateconfig"
"check:ruff" = "ruff check"
"check:ruff:format" = "ruff format --check"
"check:pytest" = "pytest"
check = [
  "check:ruff",
  "check:ruff:format",
  "check:prettier",
  "check:pyright",
  "check:mypy",
  "check:pytest",
  "check:renovateconfig"
]

"fix:format:prettier" = "mise run fix:prettier"
"fix:format:ruff" = "ruff format"
"fix:ruff" = "ruff check --fix-only"

"fix:format" = ["fix:format:prettier", "fix:format:ruff"]
fix = ["fix:format", "fix:ruff"]

all = ["sync", "check", "runall"]

[tool.poe.tasks.runall]
cmd = "adventofcode all"
env = { PYTHONWARNINGS = "always,error" }


[dependency-groups]
dev = [
  "ruff ==0.11.13",
  "joblib-stubs ==1.5.0.1.20250510",
  "mypy ==1.16.1",
  "pytest ==8.4.1",
  "poethepoet ==0.34.0",
]

[tool.pyright]
typeCheckingMode = "strict"

[tool.mypy]
strict_optional = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "COM812",
  "D10",
  "FIX",
  "ISC001",
  "PLR2004",
  "RUF009", # Needed due to https://github.com/astral-sh/ruff/issues/6447
  "S101",
  "TD002",
  "TD003"
]

[tool.ruff.lint.extend-per-file-ignores]
"tests/**/*.py" = ["INP001"]
"adventofcode/main.py" = ["T201"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.pytest.ini_options]
filterwarnings = ["error"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
